-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
e29f198b2a91b30678ebeea0d4908634e7c2b5be
The QSGLoader now allows initial property values to be specified, to which persistent v8 handles are kept. In some cases (particularly, remote url loading), the handle management done by the QSGLoader is entirely broken, causing crashes due to invalid handle scope, premature handle disposal, etc.